src/parser.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier FunDec SEMI
    8       | error SEMI

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT OptTag LC DefList RC
   14                | STRUCT Tag
   15                | STRUCT OptTag LC error RC

   16 OptTag: ID
   17       | %empty

   18 Tag: ID

   19 VarDec: ID
   20       | VarDec LB INT RB
   21       | VarDec LB error RB

   22 FunDec: ID LP VarList RP
   23       | ID LP RP
   24       | ID LP error RP

   25 VarList: ParamDec COMMA VarList
   26        | ParamDec

   27 ParamDec: Specifier VarDec
   28         | error RP
   29         | error SEMI

   30 CompSt: LC DefList StmtList RC
   31       | LC error RC

   32 StmtList: Stmt StmtList
   33         | %empty

   34 Stmt: Exp SEMI
   35     | CompSt
   36     | RETURN Exp SEMI
   37     | IF LP Exp RP Stmt
   38     | IF LP Exp RP Stmt ELSE Stmt
   39     | WHILE LP Exp RP Stmt
   40     | RETURN error SEMI
   41     | IF LP error RP Stmt
   42     | WHILE LP error RP Stmt

   43 DefList: Def DefList
   44        | %empty

   45 Def: Specifier DecList SEMI
   46    | error SEMI

   47 DecList: Dec
   48        | Dec COMMA DecList

   49 Dec: VarDec
   50    | VarDec ASSIGNOP Exp

   51 Exp: Exp ASSIGNOP Exp
   52    | Exp AND Exp
   53    | Exp OR Exp
   54    | Exp RELOP Exp
   55    | Exp PLUS Exp
   56    | Exp MINUS Exp
   57    | Exp STAR Exp
   58    | Exp DIV Exp
   59    | LP Exp RP
   60    | MINUS Exp
   61    | NOT Exp
   62    | ID LP Args RP
   63    | ID LP RP
   64    | Exp LB Exp RB
   65    | Exp DOT ID
   66    | ID
   67    | INT
   68    | FLOAT
   69    | ID LP error RP
   70    | Exp LB error RB
   71    | LP error RP

   72 Args: Exp COMMA Args
   73     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 8 15 21 24 28 29 31 40 41 42 46 69 70 71
    INT <node> (258) 20 67
    FLOAT <node> (259) 68
    ID <node> (260) 16 18 19 22 23 24 62 63 65 66 69
    TYPE <node> (261) 11
    ASSIGNOP <node> (262) 50 51
    RELOP <node> (263) 54
    PLUS <node> (264) 55
    MINUS <node> (265) 56 60
    STAR <node> (266) 57
    DIV <node> (267) 58
    AND <node> (268) 52
    OR <node> (269) 53
    NOT <node> (270) 61
    DOT <node> (271) 65
    LP <node> (272) 22 23 24 37 38 39 41 42 59 62 63 69 71
    RP <node> (273) 22 23 24 28 37 38 39 41 42 59 62 63 69 71
    LB <node> (274) 20 21 64 70
    RB <node> (275) 20 21 64 70
    LC <node> (276) 13 15 30 31
    RC <node> (277) 13 15 30 31
    SEMI <node> (278) 4 5 7 8 29 34 36 40 45 46
    COMMA <node> (279) 10 25 48 72
    STRUCT <node> (280) 13 14 15
    RETURN <node> (281) 36 40
    IF <node> (282) 37 38 41
    ELSE <node> (283) 38
    WHILE <node> (284) 39 42
    UMINUS (285)
    LOWER_THAN_ELSE (286)


Nonterminals, with rules where they appear

    $accept (32)
        on left: 0
    Program <node> (33)
        on left: 1
        on right: 0
    ExtDefList <node> (34)
        on left: 2 3
        on right: 1 2
    ExtDef <node> (35)
        on left: 4 5 6 7 8
        on right: 2
    ExtDecList <node> (36)
        on left: 9 10
        on right: 4 10
    Specifier <node> (37)
        on left: 11 12
        on right: 4 5 6 7 27 45
    StructSpecifier <node> (38)
        on left: 13 14 15
        on right: 12
    OptTag <node> (39)
        on left: 16 17
        on right: 13 15
    Tag <node> (40)
        on left: 18
        on right: 14
    VarDec <node> (41)
        on left: 19 20 21
        on right: 9 10 20 21 27 49 50
    FunDec <node> (42)
        on left: 22 23 24
        on right: 6 7
    VarList <node> (43)
        on left: 25 26
        on right: 22 25
    ParamDec <node> (44)
        on left: 27 28 29
        on right: 25 26
    CompSt <node> (45)
        on left: 30 31
        on right: 6 35
    StmtList <node> (46)
        on left: 32 33
        on right: 30 32
    Stmt <node> (47)
        on left: 34 35 36 37 38 39 40 41 42
        on right: 32 37 38 39 41 42
    DefList <node> (48)
        on left: 43 44
        on right: 13 30 43
    Def <node> (49)
        on left: 45 46
        on right: 43
    DecList <node> (50)
        on left: 47 48
        on right: 45 48
    Dec <node> (51)
        on left: 49 50
        on right: 47 48
    Exp <node> (52)
        on left: 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71
        on right: 34 36 37 38 39 50 51 52 53 54 55 56 57 58 59 60 61 64 65 70 72 73
    Args <node> (53)
        on left: 72 73
        on right: 62 72


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    8 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

   11 Specifier: TYPE .

    $default  reduce using rule 11 (Specifier)


State 3

   13 StructSpecifier: STRUCT . OptTag LC DefList RC
   14                | STRUCT . Tag
   15                | STRUCT . OptTag LC error RC

    ID  shift, and go to state 10

    $default  reduce using rule 17 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . FunDec SEMI

    ID    shift, and go to state 15
    SEMI  shift, and go to state 16

    ExtDecList  go to state 17
    VarDec      go to state 18
    FunDec      go to state 19


State 8

   12 Specifier: StructSpecifier .

    $default  reduce using rule 12 (Specifier)


State 9

    8 ExtDef: error SEMI .

    $default  reduce using rule 8 (ExtDef)


State 10

   16 OptTag: ID .
   18 Tag: ID .

    LC        reduce using rule 16 (OptTag)
    $default  reduce using rule 18 (Tag)


State 11

   13 StructSpecifier: STRUCT OptTag . LC DefList RC
   15                | STRUCT OptTag . LC error RC

    LC  shift, and go to state 20


State 12

   14 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 14 (StructSpecifier)


State 13

    0 $accept: Program $end .

    $default  accept


State 14

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 15

   19 VarDec: ID .
   22 FunDec: ID . LP VarList RP
   23       | ID . LP RP
   24       | ID . LP error RP

    LP  shift, and go to state 21

    $default  reduce using rule 19 (VarDec)


State 16

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 17

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 22


State 18

    9 ExtDecList: VarDec .
   10           | VarDec . COMMA ExtDecList
   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB error RB

    LB     shift, and go to state 23
    COMMA  shift, and go to state 24

    $default  reduce using rule 9 (ExtDecList)


State 19

    6 ExtDef: Specifier FunDec . CompSt
    7       | Specifier FunDec . SEMI

    LC    shift, and go to state 25
    SEMI  shift, and go to state 26

    CompSt  go to state 27


State 20

   13 StructSpecifier: STRUCT OptTag LC . DefList RC
   15                | STRUCT OptTag LC . error RC

    error   shift, and go to state 28
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 44 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 8
    DefList          go to state 30
    Def              go to state 31


State 21

   22 FunDec: ID LP . VarList RP
   23       | ID LP . RP
   24       | ID LP . error RP

    error   shift, and go to state 32
    TYPE    shift, and go to state 2
    RP      shift, and go to state 33
    STRUCT  shift, and go to state 3

    Specifier        go to state 34
    StructSpecifier  go to state 8
    VarList          go to state 35
    ParamDec         go to state 36


State 22

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 23

   20 VarDec: VarDec LB . INT RB
   21       | VarDec LB . error RB

    error  shift, and go to state 37
    INT    shift, and go to state 38


State 24

   10 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 39

    ExtDecList  go to state 40
    VarDec      go to state 18


State 25

   30 CompSt: LC . DefList StmtList RC
   31       | LC . error RC

    error   shift, and go to state 41
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    INT     reduce using rule 44 (DefList)
    FLOAT   reduce using rule 44 (DefList)
    ID      reduce using rule 44 (DefList)
    MINUS   reduce using rule 44 (DefList)
    NOT     reduce using rule 44 (DefList)
    LP      reduce using rule 44 (DefList)
    LC      reduce using rule 44 (DefList)
    RC      reduce using rule 44 (DefList)
    RETURN  reduce using rule 44 (DefList)
    IF      reduce using rule 44 (DefList)
    WHILE   reduce using rule 44 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 8
    DefList          go to state 42
    Def              go to state 31


State 26

    7 ExtDef: Specifier FunDec SEMI .

    $default  reduce using rule 7 (ExtDef)


State 27

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 28

   15 StructSpecifier: STRUCT OptTag LC error . RC
   46 Def: error . SEMI

    RC    shift, and go to state 43
    SEMI  shift, and go to state 44


State 29

   45 Def: Specifier . DecList SEMI

    ID  shift, and go to state 39

    VarDec   go to state 45
    DecList  go to state 46
    Dec      go to state 47


State 30

   13 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 48


State 31

   43 DefList: Def . DefList

    error   shift, and go to state 49
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    INT     reduce using rule 44 (DefList)
    FLOAT   reduce using rule 44 (DefList)
    ID      reduce using rule 44 (DefList)
    MINUS   reduce using rule 44 (DefList)
    NOT     reduce using rule 44 (DefList)
    LP      reduce using rule 44 (DefList)
    LC      reduce using rule 44 (DefList)
    RC      reduce using rule 44 (DefList)
    RETURN  reduce using rule 44 (DefList)
    IF      reduce using rule 44 (DefList)
    WHILE   reduce using rule 44 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 8
    DefList          go to state 50
    Def              go to state 31


State 32

   24 FunDec: ID LP error . RP
   28 ParamDec: error . RP
   29         | error . SEMI

    RP    shift, and go to state 51
    SEMI  shift, and go to state 52


State 33

   23 FunDec: ID LP RP .

    $default  reduce using rule 23 (FunDec)


State 34

   27 ParamDec: Specifier . VarDec

    ID  shift, and go to state 39

    VarDec  go to state 53


State 35

   22 FunDec: ID LP VarList . RP

    RP  shift, and go to state 54


State 36

   25 VarList: ParamDec . COMMA VarList
   26        | ParamDec .

    COMMA  shift, and go to state 55

    $default  reduce using rule 26 (VarList)


State 37

   21 VarDec: VarDec LB error . RB

    RB  shift, and go to state 56


State 38

   20 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 57


State 39

   19 VarDec: ID .

    $default  reduce using rule 19 (VarDec)


State 40

   10 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


State 41

   31 CompSt: LC error . RC
   46 Def: error . SEMI

    RC    shift, and go to state 58
    SEMI  shift, and go to state 44


State 42

   30 CompSt: LC DefList . StmtList RC

    INT     shift, and go to state 59
    FLOAT   shift, and go to state 60
    ID      shift, and go to state 61
    MINUS   shift, and go to state 62
    NOT     shift, and go to state 63
    LP      shift, and go to state 64
    LC      shift, and go to state 25
    RETURN  shift, and go to state 65
    IF      shift, and go to state 66
    WHILE   shift, and go to state 67

    $default  reduce using rule 33 (StmtList)

    CompSt    go to state 68
    StmtList  go to state 69
    Stmt      go to state 70
    Exp       go to state 71


State 43

   15 StructSpecifier: STRUCT OptTag LC error RC .

    $default  reduce using rule 15 (StructSpecifier)


State 44

   46 Def: error SEMI .

    $default  reduce using rule 46 (Def)


State 45

   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB error RB
   49 Dec: VarDec .
   50    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 72
    LB        shift, and go to state 23

    $default  reduce using rule 49 (Dec)


State 46

   45 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 73


State 47

   47 DecList: Dec .
   48        | Dec . COMMA DecList

    COMMA  shift, and go to state 74

    $default  reduce using rule 47 (DecList)


State 48

   13 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 13 (StructSpecifier)


State 49

   46 Def: error . SEMI

    SEMI  shift, and go to state 44


State 50

   43 DefList: Def DefList .

    $default  reduce using rule 43 (DefList)


State 51

   24 FunDec: ID LP error RP .
   28 ParamDec: error RP .

    RP        reduce using rule 28 (ParamDec)
    COMMA     reduce using rule 28 (ParamDec)
    $default  reduce using rule 24 (FunDec)


State 52

   29 ParamDec: error SEMI .

    $default  reduce using rule 29 (ParamDec)


State 53

   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB error RB
   27 ParamDec: Specifier VarDec .

    LB  shift, and go to state 23

    $default  reduce using rule 27 (ParamDec)


State 54

   22 FunDec: ID LP VarList RP .

    $default  reduce using rule 22 (FunDec)


State 55

   25 VarList: ParamDec COMMA . VarList

    error   shift, and go to state 75
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 34
    StructSpecifier  go to state 8
    VarList          go to state 76
    ParamDec         go to state 36


State 56

   21 VarDec: VarDec LB error RB .

    $default  reduce using rule 21 (VarDec)


State 57

   20 VarDec: VarDec LB INT RB .

    $default  reduce using rule 20 (VarDec)


State 58

   31 CompSt: LC error RC .

    $default  reduce using rule 31 (CompSt)


State 59

   67 Exp: INT .

    $default  reduce using rule 67 (Exp)


State 60

   68 Exp: FLOAT .

    $default  reduce using rule 68 (Exp)


State 61

   62 Exp: ID . LP Args RP
   63    | ID . LP RP
   66    | ID .
   69    | ID . LP error RP

    LP  shift, and go to state 77

    $default  reduce using rule 66 (Exp)


State 62

   60 Exp: MINUS . Exp

    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64

    Exp  go to state 78


State 63

   61 Exp: NOT . Exp

    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64

    Exp  go to state 79


State 64

   59 Exp: LP . Exp RP
   71    | LP . error RP

    error  shift, and go to state 80
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64

    Exp  go to state 81


State 65

   36 Stmt: RETURN . Exp SEMI
   40     | RETURN . error SEMI

    error  shift, and go to state 82
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64

    Exp  go to state 83


State 66

   37 Stmt: IF . LP Exp RP Stmt
   38     | IF . LP Exp RP Stmt ELSE Stmt
   41     | IF . LP error RP Stmt

    LP  shift, and go to state 84


State 67

   39 Stmt: WHILE . LP Exp RP Stmt
   42     | WHILE . LP error RP Stmt

    LP  shift, and go to state 85


State 68

   35 Stmt: CompSt .

    $default  reduce using rule 35 (Stmt)


State 69

   30 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 86


State 70

   32 StmtList: Stmt . StmtList

    INT     shift, and go to state 59
    FLOAT   shift, and go to state 60
    ID      shift, and go to state 61
    MINUS   shift, and go to state 62
    NOT     shift, and go to state 63
    LP      shift, and go to state 64
    LC      shift, and go to state 25
    RETURN  shift, and go to state 65
    IF      shift, and go to state 66
    WHILE   shift, and go to state 67

    $default  reduce using rule 33 (StmtList)

    CompSt    go to state 68
    StmtList  go to state 87
    Stmt      go to state 70
    Exp       go to state 71


State 71

   34 Stmt: Exp . SEMI
   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   70    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 88
    RELOP     shift, and go to state 89
    PLUS      shift, and go to state 90
    MINUS     shift, and go to state 91
    STAR      shift, and go to state 92
    DIV       shift, and go to state 93
    AND       shift, and go to state 94
    OR        shift, and go to state 95
    DOT       shift, and go to state 96
    LB        shift, and go to state 97
    SEMI      shift, and go to state 98


State 72

   50 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64

    Exp  go to state 99


State 73

   45 Def: Specifier DecList SEMI .

    $default  reduce using rule 45 (Def)


State 74

   48 DecList: Dec COMMA . DecList

    ID  shift, and go to state 39

    VarDec   go to state 45
    DecList  go to state 100
    Dec      go to state 47


State 75

   28 ParamDec: error . RP
   29         | error . SEMI

    RP    shift, and go to state 101
    SEMI  shift, and go to state 52


State 76

   25 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 25 (VarList)


State 77

   62 Exp: ID LP . Args RP
   63    | ID LP . RP
   69    | ID LP . error RP

    error  shift, and go to state 102
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64
    RP     shift, and go to state 103

    Exp   go to state 104
    Args  go to state 105


State 78

   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   60    | MINUS Exp .
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   70    | Exp . LB error RB

    DOT  shift, and go to state 96
    LB   shift, and go to state 97

    $default  reduce using rule 60 (Exp)


State 79

   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   61    | NOT Exp .
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   70    | Exp . LB error RB

    DOT  shift, and go to state 96
    LB   shift, and go to state 97

    $default  reduce using rule 61 (Exp)


State 80

   71 Exp: LP error . RP

    RP  shift, and go to state 106


State 81

   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   59    | LP Exp . RP
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   70    | Exp . LB error RB
